noinst_HEADERS = DtsField.h DtsObject.h FieldVec.h FieldVecDB.h SmacqModule.h SmacqModule-interface.h ThreadedSmacqModule.h cmalloc.h dllist.h dts-filter.h dts-internal.h dts-module.h dts-types.h dts.h dts_packet.h iov_bhash.h pickle.h SmacqGraph.h smacq-internal.h smacq-parser.h smacq.h smacq_args.h DynamicArray.h RunQ.h ccpp.h util.c bloom.h SmacqScheduler.h dump.h getdate_tv.h smacq_result.h Filelist.h StrucioWriter.h StrucioStream.h smacq_am.h smacq_gasnet.h StackException.h ThreadSafe.h smacq-gda.h
